log
Wed, Mar 19, 2025  1:33:34 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sun, Mar 23, 2025  1:41:50 PM: 
 tests:  0|5
total_score: 0/70
72c35f2
Sun, Mar 23, 2025  1:47:47 PM: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'crea_lista':
exercises.c:50:7: error: implicit declaration of function 'pushback'; did you mean 'pushBack'? [-Werror=implicit-function-declaration]
   50 |       pushback(L, elem);
      |       ^~~~~~~~
      |       pushBack
cc1.exe: all warnings being treated as errors
Compilation failed
43ba3da
Sun, Mar 23, 2025  2:41:36 PM: 
 exercises.c | 25 +++++++++++++++++--------
 1 file changed, 17 insertions(+), 8 deletions(-)
 tests:  3|2
total_score: 40/70
e130ed7
Sun, Mar 23, 2025  2:53:47 PM: 
 tests:  3|2
total_score: 40/70
6db0f0c
Sun, Mar 23, 2025  3:04:39 PM: 
 tests:  3|2
total_score: 40/70
7c46802
Sun, Mar 23, 2025  3:15:16 PM: 
 exercises.c | 27 ++++++++++++++++++++++-----
 1 file changed, 22 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function 'crea_lista':
exercises.c:53:15: error: 'k' undeclared (first use in this function)
   53 |       *elem = k;
      |               ^
exercises.c:53:15: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c311252
Sun, Mar 23, 2025  3:22:54 PM: 
 exercises.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function 'copia_pila':
exercises.c:107:19: error: comparison between pointer and integer [-Werror]
  107 |    while (top(P1) != -1)
      |                   ^~
exercises.c:114:25: error: comparison between pointer and integer [-Werror]
  114 |    while (top(auxiliar) != -1)
      |                         ^~
cc1.exe: all warnings being treated as errors
Compilation failed
265f65e
Sun, Mar 23, 2025  3:23:13 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
7460b6e
